--- a/src/helm/meet/templates/frontend_deployment.yaml
+++ b/src/helm/meet/templates/frontend_deployment.yaml
@@ -1,44 +1,44 @@
-{{- $envVars := include "impress.common.env" (list . .Values.webrtc) -}}
-{{- $fullName := include "impress.webrtc.fullname" . -}}
-{{- $component := "webrtc" -}}
+{{- $envVars := include "meet.common.env" (list . .Values.frontend) -}}
+{{- $fullName := include "meet.frontend.fullname" . -}}
+{{- $component := "frontend" -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ $fullName }}
   namespace: {{ .Release.Namespace | quote }}
   labels:
-    {{- include "impress.common.labels" (list . $component) | nindent 4 }}
+    {{- include "meet.common.labels" (list . $component) | nindent 4 }}
 spec:
-  replicas: {{ .Values.webrtc.replicas }}
+  replicas: {{ .Values.frontend.replicas }}
   selector:
     matchLabels:
-      {{- include "impress.common.selectorLabels" (list . $component) | nindent 6 }}
+      {{- include "meet.common.selectorLabels" (list . $component) | nindent 6 }}
   template:
     metadata:
       annotations:
-        {{- with .Values.webrtc.podAnnotations }}
+        {{- with .Values.frontend.podAnnotations }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
       labels:
-        {{- include "impress.common.selectorLabels" (list . $component) | nindent 8 }}
+        {{- include "meet.common.selectorLabels" (list . $component) | nindent 8 }}
     spec:
       {{- if $.Values.image.credentials }}
       imagePullSecrets:
-        - name: {{ include "impress.secret.dockerconfigjson.name" (dict "fullname" (include "impress.fullname" .) "imageCredentials" $.Values.image.credentials) }}
+        - name: {{ include "meet.secret.dockerconfigjson.name" (dict "fullname" (include "meet.fullname" .) "imageCredentials" $.Values.image.credentials) }}
       {{- end}}
-      shareProcessNamespace: {{ .Values.webrtc.shareProcessNamespace }}
+      shareProcessNamespace: {{ .Values.frontend.shareProcessNamespace }}
       containers:
-        {{- with .Values.webrtc.sidecars }}
+        {{- with .Values.frontend.sidecars }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
         - name: {{ .Chart.Name }}
-          image: "{{ (.Values.webrtc.image | default dict).repository | default .Values.image.repository }}:{{ (.Values.webrtc.image | default dict).tag | default .Values.image.tag }}"
-          imagePullPolicy: {{ (.Values.webrtc.image | default dict).pullPolicy | default .Values.image.pullPolicy }}
-          {{- with .Values.webrtc.command }}
+          image: "{{ (.Values.frontend.image | default dict).repository | default .Values.image.repository }}:{{ (.Values.frontend.image | default dict).tag | default .Values.image.tag }}"
+          imagePullPolicy: {{ (.Values.frontend.image | default dict).pullPolicy | default .Values.image.pullPolicy }}
+          {{- with .Values.frontend.command }}
           command:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          {{- with .Values.webrtc.args }}
+          {{- with .Values.frontend.args }}
           args:
             {{- toYaml . | nindent 12 }}
           {{- end }}
@@ -46,27 +46,27 @@ spec:
             {{- if $envVars}}
             {{- $envVars | indent 12 }}
             {{- end }}
-          {{- with .Values.webrtc.securityContext }}
+          {{- with .Values.frontend.securityContext }}
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           ports:
             - name: http
-              containerPort: {{ .Values.webrtc.service.targetPort }}
+              containerPort: {{ .Values.frontend.service.targetPort }}
               protocol: TCP
-          {{- if .Values.webrtc.probes.liveness }}
+          {{- if .Values.frontend.probes.liveness }}
           livenessProbe:
-            {{- include "impress.probes.abstract" (merge .Values.webrtc.probes.liveness (dict "targetPort" .Values.webrtc.service.targetPort )) | nindent 12 }}
+            {{- include "meet.probes.abstract" (merge .Values.frontend.probes.liveness (dict "targetPort" .Values.frontend.service.targetPort )) | nindent 12 }}
           {{- end }}
-          {{- if .Values.webrtc.probes.readiness }}
+          {{- if .Values.frontend.probes.readiness }}
           readinessProbe:
-            {{- include "impress.probes.abstract" (merge .Values.webrtc.probes.readiness (dict "targetPort" .Values.webrtc.service.targetPort )) | nindent 12 }}
+            {{- include "meet.probes.abstract" (merge .Values.frontend.probes.readiness (dict "targetPort" .Values.frontend.service.targetPort )) | nindent 12 }}
           {{- end }}
-          {{- if .Values.webrtc.probes.startup }}
+          {{- if .Values.frontend.probes.startup }}
           startupProbe:
-            {{- include "impress.probes.abstract" (merge .Values.webrtc.probes.startup (dict "targetPort" .Values.webrtc.service.targetPort )) | nindent 12 }}
+            {{- include "meet.probes.abstract" (merge .Values.frontend.probes.startup (dict "targetPort" .Values.frontend.service.targetPort )) | nindent 12 }}
           {{- end }}
-          {{- with .Values.webrtc.resources }}
+          {{- with .Values.frontend.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
@@ -76,25 +76,25 @@ spec:
               mountPath: {{ $value.path }}
               subPath: content
             {{- end }}
-            {{- range $name, $volume := .Values.webrtc.persistence }}
+            {{- range $name, $volume := .Values.frontend.persistence }}
             - name: "{{ $name }}"
               mountPath: "{{ $volume.mountPath }}"
             {{- end }}
-            {{- range .Values.webrtc.extraVolumeMounts }}
+            {{- range .Values.frontend.extraVolumeMounts }}
             - name: {{ .name }}
               mountPath: {{ .mountPath }}
               subPath: {{ .subPath | default "" }}
               readOnly: {{ .readOnly }}
             {{- end }}
-      {{- with .Values.webrtc.nodeSelector }}
+      {{- with .Values.frontend.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.webrtc.affinity }}
+      {{- with .Values.frontend.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.webrtc.tolerations }}
+      {{- with .Values.frontend.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
@@ -102,9 +102,9 @@ spec:
         {{- range $index, $value := .Values.mountFiles }}
         - name: "files-{{ $index }}"
           configMap:
-            name: "{{ include "impress.fullname" $ }}-files-{{ $index }}"
+            name: "{{ include "meet.fullname" $ }}-files-{{ $index }}"
         {{- end }}
-        {{- range $name, $volume := .Values.webrtc.persistence }}
+        {{- range $name, $volume := .Values.frontend.persistence }}
         - name: "{{ $name }}"
           {{- if eq $volume.type "emptyDir" }}
           emptyDir: {}
@@ -113,7 +113,7 @@ spec:
             claimName: "{{ $fullName }}-{{ $name }}"
           {{- end }}
         {{- end }}
-        {{- range .Values.webrtc.extraVolumes }}
+        {{- range .Values.frontend.extraVolumes }}
         - name: {{ .name }}
           {{- if .existingClaim }}
           persistentVolumeClaim:
