--- a/src/helm/meet/templates/backend_svc.yaml
+++ b/src/helm/meet/templates/backend_svc.yaml
@@ -1,5 +1,5 @@
-{{- $envVars := include "impress.common.env" (list . .Values.backend) -}}
-{{- $fullName := include "impress.backend.fullname" . -}}
+{{- $envVars := include "meet.common.env" (list . .Values.backend) -}}
+{{- $fullName := include "meet.backend.fullname" . -}}
 {{- $component := "backend" -}}
 apiVersion: v1
 kind: Service
@@ -7,7 +7,7 @@ metadata:
   name: {{ $fullName }}
   namespace: {{ .Release.Namespace | quote }}
   labels:
-    {{- include "impress.common.labels" (list . $component) | nindent 4 }}
+    {{- include "meet.common.labels" (list . $component) | nindent 4 }}
   annotations:
     {{- toYaml $.Values.backend.service.annotations | nindent 4 }}
 spec:
@@ -18,4 +18,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "impress.common.selectorLabels" (list . $component) | nindent 4 }}
+    {{- include "meet.common.selectorLabels" (list . $component) | nindent 4 }}
