💚(frontend) do not run panda codegen on npm install/npm ci
panda needs to generate types to work. We used to generate those after
deps install but it's not that necessary, since we generate them before
running the dev env, and before building the prod build.

This fixes the `npm ci` error in the frontend docker build

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -7,8 +7,7 @@
     "dev": "panda codegen && vite",
     "build": "panda codegen && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "prepare": "panda codegen"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@livekit/components-react": "2.3.3",
