wip add egress service
Integrated the LiveKit Egress service into the Docker Compose stack, inspired by
[Issue #638](https://github.com/livekit/egress/issues/638).

For testing and interacting with the LiveKit Egress service, it is recommended
to install the LiveKit CLI. Detailed setup instructions can be found in the [LiveKit CLI documentation](https://docs.livekit.io/home/cli/cli-setup/) or
the [LiveKit CLI GitHub repository](https://github.com/livekit/livekit-cli?tab=readme-ov-file).

I followed the "Running locally" guidelines from the [LiveKit Egress Repository](https://github.com/livekit/egress?tab=readme-ov-file#running-locally).
However, I did not modify all IP addresses and Redis configurations as suggested.

While the Egress service does start successfully, I believe the configuration
needs improvement. Specifically, the Egress service should share a common Redis
service with the LiveKit server, as the LiveKit server relies on Redis Pub/Sub for
communication with the Egress system.

There might be a misconfiguration in the Redis setup that needs addressing. Ensuring
that both services use a shared Redis instance is crucial for proper functionality.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
 
   redis:
     image: redis:5
+    ports:
+      - 6379:6379
+    volumes:
+      - redisdata:/data
 
   mailcatcher:
     image: sj26/mailcatcher:latest
@@ -158,3 +162,22 @@ services:
       - "7880:7880"
       - "7881:7881"
       - "7882:7882/udp"
+    depends_on:
+      - livekit_egress
+
+  livekit_egress:
+    image: livekit/egress
+    command: --security-opt seccomp=chrome-sandboxing-seccomp-profile.json
+    container_name: livekit_egress
+    restart: always
+    environment:
+      EGRESS_CONFIG_FILE: ./livekit-egress.yaml
+    depends_on:
+      - redis
+    volumes:
+      - ./livekit-egress.yaml:/livekit-egress.yaml
+      - /recording:/out
+
+
+volumes:
+  redisdata:
