wip add egress to the helm chart
This commit is a draft, and not working.
Egress system cannot start, it's connection to the redis server is refused.
I stopped there.

--- a/src/helm/helmfile.yaml
+++ b/src/helm/helmfile.yaml
@@ -55,6 +55,14 @@ releases:
     secrets:
       - env.d/{{ .Environment.Name }}/secrets.enc.yaml
 
+  - name: egress
+    installed: {{ eq .Environment.Name "dev" | toYaml }}
+    chart: livekit/egress
+    values:
+      - env.d/{{ .Environment.Name }}/values.egress.yaml.gotmpl
+    secrets:
+      - env.d/{{ .Environment.Name }}/secrets.enc.yaml
+
 environments:
   dev:
     values:
