wip use a longer LiveKit secret to avoid warnings
I have update the dev LiveKit secret to avoid any noisy log.

--- a/src/helm/env.d/dev/secrets.enc.yaml
+++ b/src/helm/env.d/dev/secrets.enc.yaml
@@ -4,7 +4,7 @@ oidc:
     clientSecret: ENC[AES256_GCM,data:KMOAVI8+loZ8hO29Ob+DcTHuXZoytrt6VHNo3MEDx6kgaxXazwZLqDmvynNdsNyyfLg8ZZAqxxvhiOVzOwVZ9w==,iv:1DzGfdVR7b+Ou+x15fk3v0aY9xZJslp2+U3H/H363Wo=,tag:/U7PEqr5b++W9sBuqocutA==,type:str]
 livekit:
     keys:
-        devkey: ENC[AES256_GCM,data:4KJotPCU,iv:QHzp9taZFwsYhno11WCjbJKAPB2huV0KkoCrnDSxQRc=,tag:gokHjR9GV56iRbmV0zbWjQ==,type:str]
+        devkey: ENC[AES256_GCM,data:e7IgKBBetiEIaP5sb3t7QlSDYXjkgGvCWLS9/+3qye9JUSI=,iv:80oC/Kjewie8XwvOUvy7e87OlnEdpmooXwFIIbt3k34=,tag:hPC+dA/vMFuUJIlmgCi0ig==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -56,8 +56,8 @@ sops:
             N0ZkVmNzTzhhRTA5TDMxc2tGN3BFemMKlyPtb7gfYREoPaU3ZlpynCuqxo4KW0b9
             G+3aGz7SKZ7pcuAaWuuMdyA6XzwS/HOe2L2cW3P5x/0k0JQd2Ie8jA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T16:08:28Z"
-    mac: ENC[AES256_GCM,data:0D1xTZwOpYKfcY94lGQnBgsLOtjxvJwwpja0+IV6zqIb3gO1762AL3btZim0OFRkhYo0SLe1Q6ABQ1tn2txK7GdPkjBaS6eJ3EQ7nuPQ75gelyoQqOOQ92/DxjBhaLkVpupmlB+62w2iMSGIjCU95E3dEc9ivyL/Rd7E0K8Irk4=,iv:c3Sh6iXepP/ptB46CjPZnZJQlNe31EFkRUNCck5sR28=,tag:/LWg/DxgPHME3B++FWGoVQ==,type:str]
+    lastmodified: "2024-07-04T16:46:56Z"
+    mac: ENC[AES256_GCM,data:l6qZkbt9q1mb5I3eEDspr/nuAcUkr5/7BBKGC39fnjHwzXRLar2073Xvnxu1DZPNL3102048wAYGW3vRyDX40y60/UCX+ESJQiDEBEl1fbTtXFJQeV2GKuXlnNFXyImAwoxOOBkIKuu6eg3tLLrujrnUau1hN6xv6xxfEVFGdWI=,iv:q6BUAT14980CQdPbXGlnl30mW+3MO7YwLIaV9DGrWOc=,tag:w/7N9NVJjPitqfGt7/iV4g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
