--- a/livekit-egress.yaml
+++ b/livekit-egress.yaml
@@ -1,6 +1,6 @@
 # required fields
 log_level: debug
-api_key: devKey
+api_key: devkey
 api_secret: secret
 ws_url: "ws://localhost:7880"
 insecure: true
