--- a/livekit-egress.yaml
+++ b/livekit-egress.yaml
@@ -2,7 +2,7 @@
 log_level: debug
 api_key: devkey
 api_secret: secret
-ws_url: "ws://localhost:7880"
+ws_url: "ws://livekit:7880"
 insecure: true
 redis:
   address: redis:6379
