wip add a minimal configuration to the LiveKit server
I need to connect it to the same instance of redis as the egress,
as they should communicate over a queue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -157,13 +157,15 @@ services:
 
   livekit:
     image: livekit/livekit-server
-    entrypoint: /livekit-server --dev --bind 0.0.0.0
+    entrypoint: /livekit-server --dev --bind 0.0.0.0 --config ./livekit.yaml
     ports:
       - "7880:7880"
       - "7881:7881"
       - "7882:7882/udp"
     depends_on:
       - livekit_egress
+    volumes:
+      - ./livekit.yaml:/livekit.yaml
 
   livekit_egress:
     image: livekit/egress
