wip fix path to match the mounted docker volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -178,7 +178,7 @@ services:
       - redis
     volumes:
       - ./livekit-egress.yaml:/livekit-egress.yaml
-      - /recording:/out
+      - ./recording:/out
 
 
 volumes:
