🔧(livekit) connect LiveKit server to Redis
LiveKit server configuration was the default ones. These configurations
were not connecting to any Redis instance. When running a standalone
LiveKit server, Redis is not needed.

However, when adding other LiveKit ecosystem service, e.g. Egress,
LiveKit server publish jobs to a Redis queue, that are handled by
the Egress workers.

(Precisely, they use Redis Pub/Sub to communicate but I am no expert)

The LiveKit server and the Egress need to be connected to the same
Redis instance. This commit configure the LiveKit server before
adding the Egress service to the compose stack.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,8 +153,12 @@ services:
 
   livekit:
     image: livekit/livekit-server
-    entrypoint: /livekit-server --dev --bind 0.0.0.0
+    entrypoint: /livekit-server --dev --bind 0.0.0.0 --config ./config.yaml
     ports:
       - "7880:7880"
       - "7881:7881"
       - "7882:7882/udp"
+    volumes:
+      - ./docker/livekit/config/livekit-server.yaml:/config.yaml
+    depends_on:
+      - redis
