✨(livekit) run locally Egress service
LiveKit offers Universal Egress, designed to provide universal exports
of LiveKit sessions or tracks to a file or stream data.

Egress is kept outside of the server to keep the load off the SFU and avoid
impacting real-time audio or video performance/quality.

Followed the "Running Locally" steps from the https://github.com/livekit/egress
repository, but I adapted them to docker-compose.

By default, I chose to run both the LiveKit server and the Egress when you
up the stack. If we see any performance issue, we could only run the LiveKit
server, which is the barebone of the product.

Egress will be usefull only when dealing with recording/exporting data.
Egress service will output file recordings to "./docker/livekit/out"

Note: the Egress service doesn't run as root. You need to update the "/out"
permissions, so all user could write to it.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -162,3 +162,14 @@ services:
       - ./docker/livekit/config/livekit-server.yaml:/config.yaml
     depends_on:
       - redis
+      - livekit-egress
+
+  livekit-egress:
+      image: livekit/egress
+      environment:
+        EGRESS_CONFIG_FILE: ./livekit-egress.yaml
+      volumes:
+        - ./docker/livekit/config/livekit-egress.yaml:/livekit-egress.yaml
+        - ./docker/livekit/out:/out
+      depends_on:
+        - redis
