--- a/env.d/development/common.dist
+++ b/env.d/development/common.dist
@@ -41,6 +41,6 @@ OIDC_REDIRECT_ALLOWED_HOSTS=["http://localhost:8083", "http://localhost:3000"]
 OIDC_AUTH_REQUEST_EXTRA_PARAMS={"acr_values": "eidas1"}
 
 # Livekit Token settings
-LIVEKIT_API_SECRET="secret"
-LIVEKIT_API_KEY="devkey"
+LIVEKIT_API_SECRET=secret
+LIVEKIT_API_KEY=devkey
 LIVEKIT_API_URL=http://localhost:7880
