🔧(helm) read LiveKit-related secrets for remote environments
Values for staging, pre-prod, prod environments were adapted to read
the newly introduced LiveKit secrets.

The extra/template/secrets.yaml should be moved to a proper location.

--- a/src/helm/extra/templates/secrets.yaml
+++ b/src/helm/extra/templates/secrets.yaml
@@ -8,3 +8,5 @@ stringData:
   DJANGO_SECRET_KEY: {{ .Values.djangoSecretKey }}
   OIDC_RP_CLIENT_ID: {{ .Values.oidc.clientId }}
   OIDC_RP_CLIENT_SECRET: {{ .Values.oidc.clientSecret }}
+  LIVEKIT_API_SECRET: {{ .Values.livekitApi.secret }}
+  LIVEKIT_API_KEY: {{ .Values.livekitApi.key }}
