--- a/src/frontend/.env.development
+++ b/src/frontend/.env.development
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost:8071/api/v1.0/
+VITE_API_BASE_URL=http://localhost:8071/
 VITE_LIVEKIT_SERVER_URL=http://localhost:7880
