--- a/env.d/development/common.dist
+++ b/env.d/development/common.dist
@@ -43,3 +43,4 @@ OIDC_AUTH_REQUEST_EXTRA_PARAMS={"acr_values": "eidas1"}
 # Livekit Token settings
 LIVEKIT_API_SECRET="secret"
 LIVEKIT_API_KEY="devkey"
+LIVEKIT_API_URL=http://localhost:7880
