--- a/src/frontend/default.conf
+++ b/src/frontend/default.conf
@@ -4,12 +4,16 @@ server {
 
   root /usr/share/nginx/html;
 
+  # Serve static files
   location / {
-      try_files $uri index.html $uri/ =404;
+      try_files $uri $uri/ /index.html;
+      # Add no-cache headers
+      add_header Cache-Control "no-cache, no-store, must-revalidate";
+      add_header Pragma "no-cache";  # HTTP 1.0 header for backward compatibility
+      add_header Expires 0;
   }
 
-  error_page 404 /404.html;
-  location = /404.html {
-      internal;
-  }
+  # Optionally, handle 404 errors by redirecting to index.html
+  error_page 404 =200 /index.html;
+  
 }
